Removed null values | Checked unique values and removed single valued columns

--- a/default_analysis.ipynb
+++ b/default_analysis.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Importing libraries and creating dataframe"
+    "# Libraries and Dataset overview"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Importing libraries"
    ]
   },
   {
@@ -15,25 +22,26 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating dataframe and viewing it"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/_v/09g1kf1j0jb3zr1vpnlqr06m0000gn/T/ipykernel_4568/2042666052.py:1: DtypeWarning: Columns (47) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(\"loan.csv\")\n"
-     ]
-    }
-   ],
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
-    "df = pd.read_csv(\"loan.csv\")"
+    "df = pd.read_csv(\"loan.csv\", low_memory=False)"
    ]
   },
   {
@@ -134,120 +142,33 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1077175</td>\n",
-       "      <td>1313524</td>\n",
-       "      <td>2400</td>\n",
-       "      <td>2400</td>\n",
-       "      <td>2400.0</td>\n",
-       "      <td>36 months</td>\n",
-       "      <td>15.96%</td>\n",
-       "      <td>84.33</td>\n",
-       "      <td>C</td>\n",
-       "      <td>C5</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1076863</td>\n",
-       "      <td>1277178</td>\n",
-       "      <td>10000</td>\n",
-       "      <td>10000</td>\n",
-       "      <td>10000.0</td>\n",
-       "      <td>36 months</td>\n",
-       "      <td>13.49%</td>\n",
-       "      <td>339.31</td>\n",
-       "      <td>C</td>\n",
-       "      <td>C1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1075358</td>\n",
-       "      <td>1311748</td>\n",
-       "      <td>3000</td>\n",
-       "      <td>3000</td>\n",
-       "      <td>3000.0</td>\n",
-       "      <td>60 months</td>\n",
-       "      <td>12.69%</td>\n",
-       "      <td>67.79</td>\n",
-       "      <td>B</td>\n",
-       "      <td>B5</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 111 columns</p>\n",
+       "<p>2 rows × 111 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "        id  member_id  loan_amnt  funded_amnt  funded_amnt_inv        term  \\\n",
        "0  1077501    1296599       5000         5000           4975.0   36 months   \n",
        "1  1077430    1314167       2500         2500           2500.0   60 months   \n",
-       "2  1077175    1313524       2400         2400           2400.0   36 months   \n",
-       "3  1076863    1277178      10000        10000          10000.0   36 months   \n",
-       "4  1075358    1311748       3000         3000           3000.0   60 months   \n",
        "\n",
        "  int_rate  installment grade sub_grade  ... num_tl_90g_dpd_24m  \\\n",
        "0   10.65%       162.87     B        B2  ...                NaN   \n",
        "1   15.27%        59.83     C        C4  ...                NaN   \n",
-       "2   15.96%        84.33     C        C5  ...                NaN   \n",
-       "3   13.49%       339.31     C        C1  ...                NaN   \n",
-       "4   12.69%        67.79     B        B5  ...                NaN   \n",
        "\n",
        "  num_tl_op_past_12m pct_tl_nvr_dlq  percent_bc_gt_75 pub_rec_bankruptcies  \\\n",
        "0                NaN            NaN               NaN                  0.0   \n",
        "1                NaN            NaN               NaN                  0.0   \n",
-       "2                NaN            NaN               NaN                  0.0   \n",
-       "3                NaN            NaN               NaN                  0.0   \n",
-       "4                NaN            NaN               NaN                  0.0   \n",
        "\n",
        "  tax_liens tot_hi_cred_lim total_bal_ex_mort total_bc_limit  \\\n",
        "0       0.0             NaN               NaN            NaN   \n",
        "1       0.0             NaN               NaN            NaN   \n",
-       "2       0.0             NaN               NaN            NaN   \n",
-       "3       0.0             NaN               NaN            NaN   \n",
-       "4       0.0             NaN               NaN            NaN   \n",
        "\n",
        "  total_il_high_credit_limit  \n",
        "0                        NaN  \n",
        "1                        NaN  \n",
-       "2                        NaN  \n",
-       "3                        NaN  \n",
-       "4                        NaN  \n",
        "\n",
-       "[5 rows x 111 columns]"
+       "[2 rows x 111 columns]"
       ]
      },
      "execution_count": 3,
@@ -256,12 +177,32 @@
     }
    ],
    "source": [
-    "df.head()"
+    "df.head(2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(39717, 111)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -391,6 +332,266 @@
    ],
    "source": [
     "df.info(verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Cleaning the dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- ### Remove null values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nullColsPercent = ((df.isnull().sum())/len(df))*100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# There are columns which have 100percent null values so removing them\n",
+    "\n",
+    "# Getting list of columns names which has only null values\n",
+    "nullColsList = nullColsPercent[nullColsPercent == 100]\n",
+    "nullColsList = nullColsList.index\n",
+    "nullColsList = list(nullColsList)\n",
+    "\n",
+    "# Removing these columns\n",
+    "df = df.drop(nullColsList, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(39717, 57)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id                             0.000000\n",
+       "member_id                      0.000000\n",
+       "loan_amnt                      0.000000\n",
+       "funded_amnt                    0.000000\n",
+       "funded_amnt_inv                0.000000\n",
+       "term                           0.000000\n",
+       "int_rate                       0.000000\n",
+       "installment                    0.000000\n",
+       "grade                          0.000000\n",
+       "sub_grade                      0.000000\n",
+       "emp_title                      6.191303\n",
+       "emp_length                     2.706650\n",
+       "home_ownership                 0.000000\n",
+       "annual_inc                     0.000000\n",
+       "verification_status            0.000000\n",
+       "issue_d                        0.000000\n",
+       "loan_status                    0.000000\n",
+       "pymnt_plan                     0.000000\n",
+       "url                            0.000000\n",
+       "desc                          32.580507\n",
+       "purpose                        0.000000\n",
+       "title                          0.027696\n",
+       "zip_code                       0.000000\n",
+       "addr_state                     0.000000\n",
+       "dti                            0.000000\n",
+       "delinq_2yrs                    0.000000\n",
+       "earliest_cr_line               0.000000\n",
+       "inq_last_6mths                 0.000000\n",
+       "mths_since_last_delinq        64.662487\n",
+       "mths_since_last_record        92.985372\n",
+       "open_acc                       0.000000\n",
+       "pub_rec                        0.000000\n",
+       "revol_bal                      0.000000\n",
+       "revol_util                     0.125891\n",
+       "total_acc                      0.000000\n",
+       "initial_list_status            0.000000\n",
+       "out_prncp                      0.000000\n",
+       "out_prncp_inv                  0.000000\n",
+       "total_pymnt                    0.000000\n",
+       "total_pymnt_inv                0.000000\n",
+       "total_rec_prncp                0.000000\n",
+       "total_rec_int                  0.000000\n",
+       "total_rec_late_fee             0.000000\n",
+       "recoveries                     0.000000\n",
+       "collection_recovery_fee        0.000000\n",
+       "last_pymnt_d                   0.178765\n",
+       "last_pymnt_amnt                0.000000\n",
+       "next_pymnt_d                  97.129693\n",
+       "last_credit_pull_d             0.005036\n",
+       "collections_12_mths_ex_med     0.140998\n",
+       "policy_code                    0.000000\n",
+       "application_type               0.000000\n",
+       "acc_now_delinq                 0.000000\n",
+       "chargeoff_within_12_mths       0.140998\n",
+       "delinq_amnt                    0.000000\n",
+       "pub_rec_bankruptcies           1.754916\n",
+       "tax_liens                      0.098195\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Checking null values again\n",
+    "\n",
+    "((df.isnull().sum())/len(df))*100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- ### Count Number of Unique values in each column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "uniqueColsValues = df.nunique()\n",
+    "\n",
+    "# Getting list of columns names which has only single values\n",
+    "uniqueColsList = uniqueColsValues[uniqueColsValues == 1]\n",
+    "uniqueColsList = uniqueColsList.index\n",
+    "uniqueColsList = list(uniqueColsList)\n",
+    "\n",
+    "#Removing those columns who have single values\n",
+    "df = df.drop(uniqueColsList, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(39717, 48)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id                          0.000000\n",
+       "member_id                   0.000000\n",
+       "loan_amnt                   0.000000\n",
+       "funded_amnt                 0.000000\n",
+       "funded_amnt_inv             0.000000\n",
+       "term                        0.000000\n",
+       "int_rate                    0.000000\n",
+       "installment                 0.000000\n",
+       "grade                       0.000000\n",
+       "sub_grade                   0.000000\n",
+       "emp_title                   6.191303\n",
+       "emp_length                  2.706650\n",
+       "home_ownership              0.000000\n",
+       "annual_inc                  0.000000\n",
+       "verification_status         0.000000\n",
+       "issue_d                     0.000000\n",
+       "loan_status                 0.000000\n",
+       "url                         0.000000\n",
+       "desc                       32.580507\n",
+       "purpose                     0.000000\n",
+       "title                       0.027696\n",
+       "zip_code                    0.000000\n",
+       "addr_state                  0.000000\n",
+       "dti                         0.000000\n",
+       "delinq_2yrs                 0.000000\n",
+       "earliest_cr_line            0.000000\n",
+       "inq_last_6mths              0.000000\n",
+       "mths_since_last_delinq     64.662487\n",
+       "mths_since_last_record     92.985372\n",
+       "open_acc                    0.000000\n",
+       "pub_rec                     0.000000\n",
+       "revol_bal                   0.000000\n",
+       "revol_util                  0.125891\n",
+       "total_acc                   0.000000\n",
+       "out_prncp                   0.000000\n",
+       "out_prncp_inv               0.000000\n",
+       "total_pymnt                 0.000000\n",
+       "total_pymnt_inv             0.000000\n",
+       "total_rec_prncp             0.000000\n",
+       "total_rec_int               0.000000\n",
+       "total_rec_late_fee          0.000000\n",
+       "recoveries                  0.000000\n",
+       "collection_recovery_fee     0.000000\n",
+       "last_pymnt_d                0.178765\n",
+       "last_pymnt_amnt             0.000000\n",
+       "next_pymnt_d               97.129693\n",
+       "last_credit_pull_d          0.005036\n",
+       "pub_rec_bankruptcies        1.754916\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Checking null values again\n",
+    "\n",
+    "((df.isnull().sum())/len(df))*100"
    ]
   }
  ],
