Removed irrelevant columns | Removed columns having large ampunt of missing data | Removing columns which are not available during loan application | Checking and removing current loans

--- a/default_analysis.ipynb
+++ b/default_analysis.ipynb
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +515,7 @@
        "(39717, 48)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +583,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -592,6 +592,273 @@
     "# Checking null values again\n",
     "\n",
     "((df.isnull().sum())/len(df))*100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- ### Removing Irrelevant columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Some columns are irrelevant for our analysis\n",
+    "\n",
+    "# Creating a list of irrelevant columns\n",
+    "unwantedColsList = ['id', 'member_id', 'emp_title', 'url', 'desc', 'title', 'zip_code']\n",
+    "\n",
+    "# Removing these columns\n",
+    "df = df.drop(unwantedColsList, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(39717, 41)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "loan_amnt                   0.000000\n",
+       "funded_amnt                 0.000000\n",
+       "funded_amnt_inv             0.000000\n",
+       "term                        0.000000\n",
+       "int_rate                    0.000000\n",
+       "installment                 0.000000\n",
+       "grade                       0.000000\n",
+       "sub_grade                   0.000000\n",
+       "emp_length                  2.706650\n",
+       "home_ownership              0.000000\n",
+       "annual_inc                  0.000000\n",
+       "verification_status         0.000000\n",
+       "issue_d                     0.000000\n",
+       "loan_status                 0.000000\n",
+       "purpose                     0.000000\n",
+       "addr_state                  0.000000\n",
+       "dti                         0.000000\n",
+       "delinq_2yrs                 0.000000\n",
+       "earliest_cr_line            0.000000\n",
+       "inq_last_6mths              0.000000\n",
+       "mths_since_last_delinq     64.662487\n",
+       "mths_since_last_record     92.985372\n",
+       "open_acc                    0.000000\n",
+       "pub_rec                     0.000000\n",
+       "revol_bal                   0.000000\n",
+       "revol_util                  0.125891\n",
+       "total_acc                   0.000000\n",
+       "out_prncp                   0.000000\n",
+       "out_prncp_inv               0.000000\n",
+       "total_pymnt                 0.000000\n",
+       "total_pymnt_inv             0.000000\n",
+       "total_rec_prncp             0.000000\n",
+       "total_rec_int               0.000000\n",
+       "total_rec_late_fee          0.000000\n",
+       "recoveries                  0.000000\n",
+       "collection_recovery_fee     0.000000\n",
+       "last_pymnt_d                0.178765\n",
+       "last_pymnt_amnt             0.000000\n",
+       "next_pymnt_d               97.129693\n",
+       "last_credit_pull_d          0.005036\n",
+       "pub_rec_bankruptcies        1.754916\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Checking null values again\n",
+    "\n",
+    "((df.isnull().sum())/len(df))*100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- ### Removing Columns having large amount of missing data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Three Columns or having more than 50% of data missing. So removing these columns from the data\n",
+    "\n",
+    "missingDataCols = ['mths_since_last_delinq', 'mths_since_last_record', 'next_pymnt_d']\n",
+    "\n",
+    "df = df.drop(missingDataCols, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(39717, 38)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- ### Removing columns which are not available at the time of Loan application"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "behaviourCols = [\n",
+    "    'delinq_2yrs', \n",
+    "    'earliest_cr_line', \n",
+    "    'inq_last_6mths', \n",
+    "    'open_acc', \n",
+    "    'pub_rec', \n",
+    "    'revol_bal', \n",
+    "    'revol_util',\n",
+    "    'total_acc',\n",
+    "    'out_prncp',\n",
+    "    'out_prncp_inv',\n",
+    "    'total_pymnt',\n",
+    "    'total_pymnt_inv',\n",
+    "    'total_rec_prncp',\n",
+    "    'total_rec_int',\n",
+    "    'total_rec_late_fee',\n",
+    "    'recoveries',\n",
+    "    'collection_recovery_fee',\n",
+    "    'last_pymnt_d',\n",
+    "    'last_pymnt_amnt',\n",
+    "    'last_credit_pull_d'\n",
+    "]\n",
+    "\n",
+    "df = df.drop(behaviourCols, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(39717, 18)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- ### Checking and removing current loans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df[~(df.loan_status == 'Current')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "loan_amnt               0.000000\n",
+       "funded_amnt             0.000000\n",
+       "funded_amnt_inv         0.000000\n",
+       "term                    0.000000\n",
+       "int_rate                0.000000\n",
+       "installment             0.000000\n",
+       "grade                   0.000000\n",
+       "sub_grade               0.000000\n",
+       "emp_length              2.677761\n",
+       "home_ownership          0.000000\n",
+       "annual_inc              0.000000\n",
+       "verification_status     0.000000\n",
+       "issue_d                 0.000000\n",
+       "loan_status             0.000000\n",
+       "purpose                 0.000000\n",
+       "addr_state              0.000000\n",
+       "dti                     0.000000\n",
+       "pub_rec_bankruptcies    1.806776\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Checking null values again\n",
+    "\n",
+    "((df.isnull().sum())/len(df))*100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- ### Treating Missing Values"
    ]
   }
  ],
