Dervied Metrics added

--- a/default_analysis.ipynb
+++ b/default_analysis.ipynb
@@ -1202,12 +1202,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lets see how many people have defaulted the loans and how many people have fully paid their loans"
+    "### Dervied Metrics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Date in column ```issue_d``` is not in the standard format. so splitting this column in two and removing it"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Splitting the column 'issue_d' in two and removing it.\n",
+    "\n",
+    "df[['issue_month', 'issue_year']] = df.issue_d.str.split('-', 1, expand=True)\n",
+    "df = df.drop(['issue_d'], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lets see how many people have defaulted the loans and how many people have fully paid their loans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1216,7 +1242,7 @@
        "<AxesSubplot:xlabel='loan_status', ylabel='count'>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     },
