--- a/default_analysis.ipynb
+++ b/default_analysis.ipynb
@@ -1086,6 +1086,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The above function takes 4 argumanets ```column name```, ```rotation Angle```, ```list of bins```, ```list of labels```.  This function will plot charts for categorical as well as continuous variables with respect to the default ratio."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Default ratio at ```term```"
    ]
   },
@@ -1691,8 +1698,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "> The default rate is increasing wrt to debt to income ratio.  \n",
+    "***```funded_amnt_inv``` ```is not```  ```a potential indicator```***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Analysis is complete  \n",
-    "The columns ```term, grade, sub_grade, purpose, annual_inc, loan_amnt, int_rate, addr_state, installment, dti``` are useful for further analysis."
+    "The columns ```term, grade, sub_grade, purpose, annual_inc, loan_amnt, int_rate, addr_state, installment, dti``` are the potential indicators."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Observations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***The following signifacant results were noticed by performing the analysis***\n",
+    "* If the term of the loan is higher, (Ex. 60months) the default rate is more likely to increase. The company should be careful while approving loans with higher terms.\n",
+    "* The default rate will increase if we go down the grade. The default rate is lowest for grade A and the highest for grade G. Similar results are seen for the subgrades. \n",
+    "* For smalll business the default rate is the highest. If a person is applying for a loan for a small busniess then that person is more likely to default.\n",
+    "* Default rate is increasing with the decrease in annual income. People with less annual income are more likely to default.\n",
+    "* Default rate is increasing with increase in loan amount. Amounts greater than 15000 are facing the highest defaults.\n",
+    "* Higher interet rates will alwayts increas the defaults.\n",
+    "* Issuing loans in state NE can be risky.\n",
+    "* Higher installments will increase the defaults.\n",
+    "* Default rate increases with increase in dti ratio."
    ]
   }
  ],
