--- a/default_analysis.ipynb
+++ b/default_analysis.ipynb
@@ -1698,7 +1698,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> The default rate is increasing wrt to debt to income ratio.  \n",
+    "> No such significant variations  \n",
     "***```funded_amnt_inv``` ```is not```  ```a potential indicator```***"
    ]
   },
